# openfhe-client-server

./: CMakeLists.txt  README.md  demo_advanced_ckks_bootstraping.cpp  main.cpp  web_server.cpp
ext/: FHEExtensions.cpp  FHEExtensions.h
parser/: ExpressionParser.cpp  ExpressionParser.h  ExpressionTree.cpp  ExpressionTree.h  ExpressionTreeNode.cpp  ExpressionTreeNode.h
test/: TestExpressionParser.cpp  TextFHEExtensions.cpp
